--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/",
     "prepare": "husky install",
-    "lint-staged":"lint-staged"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "element-plus": "^2.13.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
@@ -29,12 +31,16 @@
     "globals": "^16.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "prettier": "3.7.4",
+    "sass": "^1.97.1",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5"
   },
-  "lint-staged":{
-    "*.{js,ts,vue}":[
+  "lint-staged": {
+    "*.{js,ts,vue}": [
       "eslint --fix"
     ]
   }
