--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.13.2",
     "element-plus": "^2.13.0",
     "pinia": "^3.0.4",
@@ -35,6 +36,7 @@
     "pinia-plugin-persistedstate": "^4.7.1",
     "prettier": "3.7.4",
     "sass": "^1.97.1",
+    "sass-loader": "^16.0.6",
     "unplugin-auto-import": "^20.3.0",
     "unplugin-vue-components": "^30.0.0",
     "vite": "^7.3.0",
